Added support for layout drawings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         ${PROJECT_SOURCES}
         pvroof.h pvroof.cpp
         pvsqlite.h pvsqlite.cpp
+        pvdrawing.h pvdrawing.cpp
 
 
 
